samples/_failures_safe/1761374223_5ef12d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c8b46fb.c: In function ‘main’:
./samples/SAFE/__tmp_3c8b46fb.c:126:31: error: expected ‘)’ at end of input
  126 |     double cpu_time = ((double
      |                        ~      ^
      |                               )
./samples/SAFE/__tmp_3c8b46fb.c:126:5: error: expected declaration or statement at end of input
  126 |     double cpu_time = ((double
      |     ^~~~~~
